syntax = "proto3";
import "google/protobuf/empty.proto";
option cc_generic_services = true;

message Ms2GsLoginRequest
{
  uint32 enter_gs_type = 1;
  uint64 session_id = 2;
}

service ServerPlayerLoginService 
{
  rpc LoginMs2Gs (Ms2GsLoginRequest) returns (google.protobuf.Empty);
}